[metadata]
name = nakaocircusutil
version = 0.0.2
author = NAKAO Takahiro
author_email = tanakao-tky@umin.ac.jp
description = Nakao CIRCUS Utilities

[options]
packages = find:
install_requires =
  numpy
  scipy
  SimpleITK
  fire

[options.extras_require]
dev =
  pytest

[options.entry_points]
console_scripts =
  update-voxels = nakaocircusutil.cli.update_voxels:main